@@ -23,7 +23,7 @@ public class RollDiceClosure extends AbstractCommand {
 
 	private int number = 1;
 
-	private Map rollMappings = null;
+	private Map<Integer, Closure> rollMappings;
 
 	public RollDiceClosure(Element element) {
 
@@ -33,7 +33,7 @@ public class RollDiceClosure extends AbstractCommand {
 			this.number = Integer.parseInt(element.getAttribute("number"));
 		}
 
-		this.rollMappings = new HashMap();
+		this.rollMappings = new HashMap<Integer, Closure>();
 		NodeList doActionsElements = element.getElementsByTagName("doActions");
 		for (int i = 0; i < doActionsElements.getLength(); i++) {
 			Element doActionsElement = (Element) doActionsElements.item(i);
@@ -43,21 +43,17 @@ public class RollDiceClosure extends AbstractCommand {
 			String rolls = doActionsElement.getAttribute("rolls");
 			StringTokenizer rollTokenizer = new StringTokenizer(rolls, ",");
 			while (rollTokenizer.hasMoreTokens()) {
-				Integer roll = new Integer(rollTokenizer.nextToken());
+				Integer roll = Integer.valueOf(rollTokenizer.nextToken());
 				rollMappings.put(roll, actionsForElement);
 			}
 		}
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.apache.commons.collections.Closure#execute(java.lang.Object)
-	 */
+	@Override
 	public void execute(GameState gameState) {
 		int diceRollResult = DiceRoller.rollDice(this.number);
 		if (this.rollMappings.containsKey(diceRollResult)) {
-			((Closure) this.rollMappings.get(new Integer(diceRollResult))).execute(gameState);
+			this.rollMappings.get(diceRollResult).execute(gameState);
 		}
 	}
 
